crates/monochange_integration_tests/tests/snapshots/dart_trusted_publishing__dart_placeholder_publish_fails_fast_when_the_oidc_token_cannot_be_minted.snap
---
source: crates/monochange_integration_tests/tests/dart_trusted_publishing.rs
expression: "String::from_utf8_lossy(&output.stderr).replace(&server.base_url,\n\"[mock-endpoints]\")"
---
error[publish.failed]: package publishing did not complete: 1 total, 0 published, 1 failed, 0 blocked, 0 already existed, 0 not attempted, 0 planned; failed package dart_pkg 0.0.0: io error: refreshing the pub.dev trusted publishing token for package `dart_pkg` failed: io error: GitHub Actions OIDC token request for [mock-endpoints]/token&audience=https%3A%2F%2Fpub.dev failed with HTTP 500 Internal Server Error: the workflow job must grant `permissions: id-token: write`
  command: monochange step placeholder-publish
  help:    Fix the failed packages listed above, then rerun the publish command; by default, versions that already exist on the registry are skipped.
